# fortran-cpp-interface

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cppcheck.supp  cxx_call_f.cxx  f_call_c.f90  fpm.toml  memcheck.cmake  meson.build  valgrind.supp
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_cmake.yml  ci_macos.yml  ci_meson.yml  intel-oneapi.yml  oneapi-linux.yml  oneapi-linux.yml.bak
.github/workflows/composite-unix/: action.yml
app/: dummy.f90
app/allocate/: interactive.cpp  main.c  main.cpp
app/array/: main.cpp
app/contiguous/: main.c
app/error/: error_c.f90  error_cpp.f90  main.c  main.cpp
app/malloc/: main.c  main.cpp
app/opaque/: main.c
app/poly_type/: main.c  main.cpp
app/struct/: main.c  main.cpp
app/submodule/: main.c
c/: CMakeLists.txt  meson.build
cmake/: compilers.cmake  f03bind.cmake  f08contiguous.cmake  f08submod_bind.cmake  find_compilers.cmake  options.cmake  test_error.cmake  will_fail.cmake
cmake/abi_check/: CMakeLists.txt  addone.c  addtwo.cpp  main.c  main.cpp  main.f90  myadd.h
cmake/exception_check/: CMakeLists.txt
concepts/: CMakeLists.txt
cxx/: CMakeLists.txt  call_cxx.cxx  meson.build
signal/: CMakeLists.txt  README.md  c_interface.F90  c_interface.c  main_unix.f90  main_windows.f90
src/: CMakeLists.txt  meson.build
src/allocate/: CMakeLists.txt  README.md  f_alloc.f90  fancy.f90  intel.cpp  intel.f90  lib.f90  main.cpp  my_alloc.h
src/array/: CMakeLists.txt  lib.c  lib.cpp  main.f90
src/bool/: CMakeLists.txt  bad_bool.f90  lib.f90  logbool.c  logbool.cpp  logbool.f90  main.c  main.cpp  my_bool.h
src/bounds/: bounds.c  bounds.cpp  bounds.f90  bounds.h
src/c/: CMakeLists.txt  error_lib.c  error_main.c  meson.build  my_struct.h  string_array_main.c  struct_lib.c  struct_main.c  vector_lib.c
src/concepts/: CMakeLists.txt  meson.build
src/contiguous/: contiguous.f90  contiguous.h
src/cxx/: CMakeLists.txt  array_main.cxx  error_main.cxx  math_main.cxx  meson.build  opaque_main.cxx  pointer_main.cxx  poly_fcn_main.cpp  struct_lib.cxx  struct_main.cxx
src/error/: CMakeLists.txt  error.f90  lib.c  lib.cpp  lib.f90  main.cpp  my_error.h
src/fortran/: CMakeLists.txt  error.f90  error_main.f90  meson.build  module.f90  opaque_lib.f90  pointer_lib.f90  poly_fcn_lib.f90  poly_type_lib.f90  string_array_lib.f90  struct.f90  struct_main.f90  submodule.f90
src/malloc/: CMakeLists.txt  main.c  main.cpp
src/opaque/: CMakeLists.txt  lib.f90  main.c  my_opaque.h
src/pointer/: CMakeLists.txt  lib.f90  main.c  main.cpp  my_pointer.h  null.c  null.cpp
src/poly_function/: CMakeLists.txt  c_interface_poly.f90  data_lib.f90  datamod_poly.f90  fcn_lib.f90  main.cpp  my_polyfcn.h
src/poly_type/: CMakeLists.txt  base_mod.f90  four.f90  lib.f90  main.c  main.cpp  my_poly_type.h  three.f90
src/sleep/: sleep.c  sleep.cpp  sleep.h  sleep_std.f90
src/sleep/reference/: posix_nanosleep.f90  posix_usleep.f90  windows.f90
src/struct/: CMakeLists.txt  lib.cpp  lib.f90  main.c  main.f90  my_struct.h
src/submodule/: CMakeLists.txt  lib.f90  my_submodule.h
src/tictoc/: CMakeLists.txt  lib.f90
src/uid/: uid.cpp  uid.h
src/vector/: CMakeLists.txt  lib.c  lib.cpp  lib.f90  main.cpp  main.f90  mathv.f90  my_vector.h
test/allocate/: CMakeLists.txt  README.md  intel.cpp  interactive.cpp  main.c  main.cpp
test/array/: CMakeLists.txt  array.f90  lib.c  lib.cpp  main.cpp  main.f90
test/bool/: CMakeLists.txt  Readme.md  bad_interface.f90  main.c  main.cpp  main.f90
test/bounds/: CMakeLists.txt  bounds.f90
test/cfi_allocate/: CMakeLists.txt  cfi_allocate.c
test/cfi_establish/: CMakeLists.txt  main.f90
test/cfi_setpointer/: CMakeLists.txt  main.f90
test/contiguous/: CMakeLists.txt  bad.f90  main.c  main.cpp
test/derived/: CMakeLists.txt  derived.f90  main.c
test/error/: CMakeLists.txt  README.md  error_c.f90  error_cpp.f90  lib.cpp  main.c
test/exception/: CMakeLists.txt  exception.cpp  exception.f90  raise_exception.cpp  raise_exception.h
test/glibc/: CMakeLists.txt  getuid.f90
test/iso_fortran_binding/: CMakeLists.txt  c_string.c  cfi_allocate.c  cfi_allocate.f90  sampling.cpp  sampling.f90  setpointer.c  setpointer.f90  string_array.cpp  string_array.f90  string_inout.c  string_inout.cpp  string_inout.f90  string_view.cpp  string_view.f90
test/iterator/: CMakeLists.txt  int_iter.h  iter_vector.cpp  lib.cpp  main.cpp  main.f90  standalone.cpp
test/malloc/: CMakeLists.txt  main.c  main.cpp
test/nullptr/: CMakeLists.txt  Readme.md  lib.c  lib.cpp  main.f90  nullptr.h
test/opaque/: CMakeLists.txt  main.c  main.cpp  my_opaque.h
test/pointer/: CMakeLists.txt  README.md  main.c  main.cpp  main.f90  null_c.f90  pmod.f90  pointer_bounds.f90
test/poly_function/: CMakeLists.txt  main.cpp
test/poly_type/: CMakeLists.txt  base_mod.f90  main.c  main.cpp  poly_type.f90  three.f90
test/real/: CMakeLists.txt  main.c  main.cpp  mynan.h  nan.f90
test/sleep/: CMakeLists.txt  test_sleep.f90  ticks.f90
test/string/: CMakeLists.txt  README.md  f_print.h  lib_char.c  main.c  main.cpp  main_char.f90  print.f90
test/struct/: CMakeLists.txt  derived.f90  lib.c  lib.cpp  main.c  main_derived.c  my_struct.h  struct_rx.f90  struct_tx.f90
test/submodule/: CMakeLists.txt  main.c  main.cpp
test/tictoc/: CMakeLists.txt  clock.f90  main.cpp
test/time/: CMakeLists.txt  README.md  main.cpp  strftime.f90  strptime.cpp  strptime.f90
test/uid/: CMakeLists.txt  getuid.f90
test/vector/: CMakeLists.txt  lib.c  lib.cpp  main.cpp  mathv.f90  my_vector.h  vector.f90
